# axiom-apex

./: .gitattributes  .gitignore  1.txt  CHANGELOG.md  Dockerfile  LICENSE  README.md  TEST_RESULTS.md  config.py  docker-compose.yml  mcp.py  memory.py  prompt.txt  pyproject.toml  pyproject.toml.bak  templates.json
.github/: README.md
.github/profile/: README.md
.github/workflows/: ci.yml  deploy-pages.yml  publish.yml
apex/: README.md  __main__.py  __main__.py.bak2  __main__.py.bak3  bench.py  config.py  config.py.bak  export.py  history.py  history.py.bak  llm.py  llm.py.bak  memory.py  paranoid.py  prompt.txt  providers.py  replay.py  rsi.py  rsi.py.bak  server.py  templates.py  toolloader.py  tools.py
apex/benchmarks/: README.md  parallel_codegen.py  tasks.json
apex/core/: README.md  loop.py  loop.py.bak  planner.py  rag.py  schema.py  state.py  swarm.py  tools.py  trace.py  types.py  validator.py
apex/examples/: README.md  autonomous-business.sh  changelog-writer.sh  cli_demos.sh  code-review.sh  competitive-intelligence-swarm.sh  debate-engine.sh  due-diligence-swarm.sh  generative-3d.sh  iterative-coder.sh  parallel-swarm.sh  postmortem.sh  pressure-test.sh  (+6 more)
axiom_apex.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
core/: README.md  api_clients.py  loop.py  planner.py  rag.py  rollback.py  state.py  types.py
docs/: README.md  current_system_state.md  marketing_strategy.md  new_tasks_for_project.md  use_cases.md
examples/: README.md  chargen.sh  generative-3d.sh  research-agent.sh  research-swarm.sh
llm/: README.md  providers.py
memory/: README.md  sqlite.py
prompts/: README.md  planner.txt  system.txt
templates/: README.md  apex-revenue-content.sh  apex-revenue-proposals.sh  apex-template-agency.sh  apex-template-fitness.sh  apex-template-medical.sh  apex-template-morning_automation.sh  apex-template-restaurant.sh  apex-template-retail.sh  ecom.sh  fitness.sh  lawfirm.sh  morning.sh  msp.sh  realestate.sh  restaurant.sh  retail.sh  revenue-content.sh  revenue-monitor.sh
tests/: README.md  test_rag.py
tools/: README.md  basic.py  registry.py
(+60 files in other folders)
